--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <script>
+      //  input Player Selection
       let playerSelection = prompt("Enter: Rock, Paper or Scissors");
       // Random Computer Choice
       const options = ["Rock", "Paper", "Scissors"];
@@ -17,32 +18,40 @@
       }
 
       function playRound(playerSelection, computerSelection) {
+        // Make selection's case sensitive by changing them to lower case
         computerSelection = getComputerChoice().toLowerCase();
         playerSelection = playerSelection.toLowerCase();
-        console.log(computerSelection);
+        // if both selections are the same
         if (playerSelection == computerSelection) {
-          console.log("Draw");
+          return "Draw";
+          // if the computer's selection wins
         } else if (
           (playerSelection == "rock" && computerSelection == "paper") ||
           (playerSelection == "paper" && computerSelection == "scissors") ||
           (playerSelection == "scissors" && computerSelection == "rock")
         ) {
-          console.log("You Lose! " + computerSelection + " beats " + playerSelection);
+          return "You Lose! " + computerSelection + " beats " + playerSelection;
+          // if the player's selection wins
         } else if (
           (playerSelection == "rock" && computerSelection == "scissors") ||
           (playerSelection == "paper" && computerSelection == "rock") ||
           (playerSelection == "scissors" && computerSelection == "paper")
         ) {
-          console.log("You Win! " + playerSelection + " beats " + computerSelection);
+          return "You Win! " + playerSelection + " beats " + computerSelection;
         }
       }
-     
-      console.log(playRound(playerSelection));
+      // // test
+      // const computerSelection = getComputerChoice();
+      // console.log(playRound(playerSelection, computerSelection));
+
+      function game() {
+        for (let i = 0; i < 5; i++) {
+          const currentRound = playRound(playerSelection, computerSelection);
+        }
+      }
+      
+      console.log(game());
+
     </script>
-    <!-- Generate random number between 1 and 3 -->
-    <!-- if random number = 1 then it's Rock -->
-    <!-- if random number = 2 then it's Paper -->
-    <!-- if random number = 3 then it's Scissors -->
-    <!-- return output -->
   </body>
 </html>
