Add style to result divs

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       </button>
     </div>
     <div id="results">
+      <div id="pSelectContainer"></div>
+      <div id="cSelectContainer"></div>
+      <div id="matchResultContainer"></div>
     </div>
   </body>
 </html>
