Add overall score

--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
       <div id="cSelectContainer"></div>
       <div id="matchResultContainer"></div>
     </div>
+    <div id="score">
+      <div id="pScoreContainer"></div>
+      <div id="cScoreContainer"></div>
+      <div id="dScoreContainer"></div>
+    </div>
   </body>
 </html>
