--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <div id="resetPage">
+      
+    </div>
     <div class="container">
       <div id="winnerDisplay"></div>
       <div class="btn__container">
