--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div id="resetPage">
-      
+      <div id="resetButton">
+
+      </div>
     </div>
     <div class="container">
       <div id="winnerDisplay"></div>
